--- a/styles.css
+++ b/styles.css
@@ -15,24 +15,25 @@ h1 {
 }
 
 input {
-	width: 50%;
+	min-width: 700px;
+	margin-bottom: 2px;
 }
 
 #output {
 	min-height: 500px;
 }
 #output h3 {
+	max-width: 400px;
 	background-color: #ffc107;
-	max-width: 50%;
 }
 #output img {
-	max-width: 25%;
+	max-width: 400px;
 }
 
 #goblin {
-	max-width: 25%;
 }
 
 #address {
 	font-weight: bold;
+	word-wrap: break-word;
 }
